--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 11.0.2 for binding GitHub repository
+Projet WAR simple pour montrer l'utilisation du plugin tomcat et plus précisément du goal exec-war.
